show_results 2 col

--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "893bf9e9",
+   "id": "a314ce40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ced3ee4",
+   "id": "0505153a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d10b5f66",
+   "id": "58d3d666",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "641f0b1f",
+   "id": "314dd02c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +46,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f337d502",
+   "id": "c3d654a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "from fastai.basics import *\n",
+    "from fastai.text.all import TensorText\n",
     "from inspect import signature\n",
     "from fasthugs.data import TransformersTextBlock\n",
     "\n",
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4446fafa",
+   "id": "22af49c8",
    "metadata": {},
    "source": [
     "# Learner for transformers"
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b58abaf",
+   "id": "b3b026cb",
    "metadata": {},
    "source": [
     "## Parameter groups"
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "504febf1",
+   "id": "f902e636",
    "metadata": {},
    "source": [
     "TODOs:\n",
@@ -88,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b9bc09",
+   "id": "86e51e58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac1d3d41",
+   "id": "5bd7ef6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c453365b",
+   "id": "faf8ad70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b71cb17c",
+   "id": "2ed06606",
    "metadata": {},
    "source": [
     "## TransLearner and utils"
@@ -132,7 +133,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9531c37",
+   "id": "68230bbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "@typedispatch\n",
+    "def show_results(x: TensorText, y, samples, outs, ctxs=None, max_n=10, trunc_at=150, **kwargs):\n",
+    "    if ctxs is None: ctxs = get_empty_df(min(len(samples), max_n))\n",
+    "    if isinstance(samples[0][0], tuple):\n",
+    "        samples = L((*s[0], *s[1:]) for s in samples)\n",
+    "        if trunc_at is not None: samples = L((s[0].truncate(trunc_at), s[1].truncate(trunc_at), *s[2:]) for s in samples)\n",
+    "    elif trunc_at is not None: samples = L((s[0].truncate(trunc_at),*s[1:]) for s in samples)\n",
+    "    ctxs = show_results[object](x, y, samples, outs, ctxs=ctxs, max_n=max_n, **kwargs)\n",
+    "    display_df(pd.DataFrame(ctxs))\n",
+    "    return ctxs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31a7ece9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef9e9a56",
+   "id": "76f189de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "877c0deb",
+   "id": "b0b1ea45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50d87b2e",
+   "id": "8d1f039c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af1a7951",
+   "id": "4e7ea0fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdeffcde",
+   "id": "f88dbc99",
    "metadata": {},
    "source": [
     "### Using TransLearner for sequence classification"
@@ -262,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd4dc84c",
+   "id": "dfda340f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1953bccb",
+   "id": "6b7b0fd3",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4d865d0",
+   "id": "7756bef9",
    "metadata": {},
    "source": [
     "## Fin"
@@ -356,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3587d9df",
+   "id": "b234ab48",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57547a11",
+   "id": "d78a46a9",
    "metadata": {},
    "outputs": [],
    "source": []
