--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a314ce40",
+   "id": "665e7136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0505153a",
+   "id": "05dc0513",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58d3d666",
+   "id": "e3e4e82c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "314dd02c",
+   "id": "16fc7093",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3d654a8",
+   "id": "c8a2e2ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22af49c8",
+   "id": "b1590a96",
    "metadata": {},
    "source": [
     "# Learner for transformers"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3b026cb",
+   "id": "55e23461",
    "metadata": {},
    "source": [
     "## Parameter groups"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f902e636",
+   "id": "27175e46",
    "metadata": {},
    "source": [
     "TODOs:\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86e51e58",
+   "id": "faaef674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bd7ef6c",
+   "id": "8bbf4c98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf8ad70",
+   "id": "4be46319",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ed06606",
+   "id": "ee0d7d5d",
    "metadata": {},
    "source": [
     "## TransLearner and utils"
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68230bbd",
+   "id": "486d8dc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31a7ece9",
+   "id": "68b9e978",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f189de",
+   "id": "f9fa9af1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0b1ea45",
+   "id": "096d2fab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d1f039c",
+   "id": "d6d10de5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e7ea0fc",
+   "id": "800831db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
     "class TransLearner(Learner):\n",
     "    \"Learner for training transformers from HuggingFace\"\n",
     "    def __init__(self, dls, model, **kwargs):\n",
-    "        splitter = kwargs.pop('splitter', None)\n",
+    "        splitter = kwargs.get('splitter', None)\n",
     "        if splitter is None: kwargs['splitter'] = default_splitter\n",
     "        super().__init__(dls, model, **kwargs)\n",
     "        self.model_args = set(signature(model.forward).parameters.keys())\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f88dbc99",
+   "id": "22890b00",
    "metadata": {},
    "source": [
     "### Using TransLearner for sequence classification"
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfda340f",
+   "id": "4f67f4de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b7b0fd3",
+   "id": "ec72d0c9",
    "metadata": {},
    "outputs": [
     {
@@ -336,16 +336,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0.446150</td>\n",
-       "      <td>0.542738</td>\n",
-       "      <td>0.765000</td>\n",
+       "      <td>0.426269</td>\n",
+       "      <td>0.398175</td>\n",
+       "      <td>0.860000</td>\n",
        "      <td>00:21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.288374</td>\n",
-       "      <td>0.300514</td>\n",
-       "      <td>0.895000</td>\n",
+       "      <td>0.240389</td>\n",
+       "      <td>0.487833</td>\n",
+       "      <td>0.850000</td>\n",
        "      <td>00:21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7756bef9",
+   "id": "7d1d2521",
    "metadata": {},
    "source": [
     "## Fin"
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b234ab48",
+   "id": "9906e47e",
    "metadata": {},
    "outputs": [
     {
@@ -389,6 +389,7 @@
       "Converted 10_examples.classification-imdb.ipynb.\n",
       "Converted 11_examples.mlm-imdb.ipynb.\n",
       "Converted 12_examples.glue-benchmark.ipynb.\n",
+      "Converted 12a_examples.glue-benchmark-sweeps.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -401,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d78a46a9",
+   "id": "96767f22",
    "metadata": {},
    "outputs": [],
    "source": []
