--- a/nbs/12a_examples.glue-benchmark-sweeps.ipynb
+++ b/nbs/12a_examples.glue-benchmark-sweeps.ipynb
@@ -454,7 +454,7 @@
    ],
    "source": [
     "#hide_output\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=glue_num_labels.get('task', 2))\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=glue_num_labels.get(task, 2))\n",
     "metrics = glue_metrics[task]\n",
     "learn = TransLearner(dls, model, metrics=metrics, opt_func=opt_func, splitter=layerwise_splitter)"
    ]
@@ -737,15 +737,17 @@
     "metric_to_monitor = metrics[0].name if isinstance(metrics[0], Metric) else metrics[0].__name__\n",
     "sweep_name = f\"glue-{task}-sweep\"\n",
     "sweep_config = {\n",
-    "  \"name\": sweep_name,\n",
-    "  \"method\": \"random\",\n",
-    "  \"parameters\": {\n",
+    "    \"project\":\"glue-benchmark\",\n",
+    "    \"entity\": \"fastai_cimmunity\",\n",
+    "    \"name\": sweep_name,\n",
+    "    \"method\": \"random\",\n",
+    "    \"parameters\": {\n",
     "        \"lr\": {\"values\":[1e-5,2e-5,3e-5,5e-5, 1e-4, 3e-4]},\n",
-    "        \"wd\":{\"values\":[0.,1e-2,5e-2]},\n",
+    "        \"wd\": {\"values\":[0.,1e-2,5e-2]},\n",
     "        \"diff_lr_decay_factor\":{\"values\":[0., 0.9, 0.8, 0.7, 0.6]}\n",
     "    },\n",
-    "  \"metric\":{\"goal\": \"maximise\", \"name\": metric_to_monitor},\n",
-    "  \"early_terminate\": {\"type\": \"hyperband\", \"s\": 2, \"eta\": 3, \"max_iter\": 40}\n",
+    "    \"metric\":{\"goal\": \"maximise\", \"name\": metric_to_monitor},\n",
+    "    \"early_terminate\": {\"type\": \"hyperband\", \"s\": 2, \"eta\": 3, \"max_iter\": 40}\n",
     "}"
    ]
   },
@@ -965,13 +967,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Tracking with W&B"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1029,13 +1024,6 @@
     "#hide_output \n",
     "wandb.init(reinit=True, project=\"glue-benchmark\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training"
    ]
   },
   {
