--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -44,27 +44,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wip..."
+    "### Pre-training\n",
+    "\n",
+    "[Masked Language modeling](https://aikindergarten.github.io/fasthugs/examples.mlm-imdb.html)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "4 + 2 == 42"
+    "### Fine-tuning\n",
+    "\n",
+    "1. [Sentiment classification: IMDB](https://aikindergarten.github.io/fasthugs/examples.classification-imdb.html)\n",
+    "2. [GLUE benchmark](https://aikindergarten.github.io/fasthugs/examples.glue-benchmark.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hyper-parameter search\n",
+    "\n",
+    "[W&B sweeps](https://aikindergarten.github.io/fasthugs/examples.glue-benchmark-sweeps.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And more coming soon..."
    ]
   },
   {
